--- a/templates/index.html
+++ b/templates/index.html
@@ -217,8 +217,8 @@
         
         <h3>📤 Export Live Trades</h3>
         <form method="POST" action="/live/export">
-          <button type="submit" name="format" value="csv">Export CSV</button>
-          <button type="submit" name="format" value="json">Export JSON</button>
+          <button type="submit" name="format" value="csv" class="btn btn-success">Export CSV</button>
+          <button type="submit" name="format" value="json" class="btn btn-success">Export JSON</button>
         </form>
       </div>
 
